--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ subtitle: ''
 description: ''
 keywords:
 author: John Doe
-language: en
+language: vi
 timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://example.com
+url: http://huymii.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
